Add hover fix for Safari

--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@
         height: 45px;
         width: 45px;
         float: right;
+        cursor: pointer;
+        text-decoration: none;
       }
 
       .activity-instructions {
@@ -309,7 +311,7 @@
 
     <!-- Instructions below: not part of the activity -->
     <div class="activity-help">
-      <span class="activity-help__icon">?</span>
+      <a class="activity-help__icon" href="javascript:void(0);">?</a>
       <div class="activity-instructions">
         <h2 class="activity-instructions__heading">Topics</h2>
         <ul class="activity-instructions__list">
