Add browser tab title and favicon in to do list

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Kitten Gang</title>
+    <link rel="icon" href="https://findicons.com/files/icons/1243/hello_kitty/256/kitty_2.png">
     <style>
       * {
         padding: 0;
@@ -321,6 +322,7 @@
           <li>CSS Grid system</li>
           <li>CSS Clearfix</li>
           <li>CSS Pseudo-Classes (Hover)</li>
+          <li>Browser Tab Title and Favicon</li>
         </ul>
 
         <h2 class="activity-instructions__heading">To do</h2>
@@ -342,6 +344,7 @@
           <li>On hover on image, display name on top of image for Desktop</li>
           <li>Name displayed below each image for Mobile</li>
           <li>Add background image for entire page</li>
+          <li>Add browser tab title and favicon</li>
         </ul>
       </div>
     </div>
